tests/Checker/everything/errors/24b.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *24: continue must be in a while/for
Compilation was unsuccessful.
